@@ -2,3 +2,9 @@ memstats
 echo Memory Information:
 memlist
 cvarlist
+
+machine_add_component cpu8086
+machine_add_component dma8237
+machine_add_component pit8253
+machine_add_component ppi8255
+machine_add_component pic8259
