@@ -12,4 +12,6 @@ namespace Volt
 	bool Cmdline_Check(const char* option);
 	uint32_t Cmdline_Argc();
 	const char* Cmdline_Argv(uint32_t c);
+
+	void Cmdline_ParseExec();
 }
