@@ -1,4 +1,3 @@
-
 #include <emulation/emulation.hpp>
 #include "components/cpu/cpu8086.hpp"
 #include "components/support/i8237_dma.hpp"
@@ -9,46 +8,46 @@
 
 namespace Volt
 {
-    Machine test_machine;
+    Machine emu_machine;
 
     bool emulation_running; 
 
     //TEMP
     void Emulation_Init()
     {
-        Render_Init();
-
         Logging_LogAll("******** Emulation_Init ********", LogChannel::Debug);
 
-        CPU8086* cpu_808x = Memory_Alloc<CPU8086>(TAG_EMU_COMPONENT_CPU);
-        PIT8253* pit = Memory_Alloc<PIT8253>(TAG_EMU_COMPONENT_TIMER);
-        DMA8237* dma = Memory_Alloc<DMA8237>(TAG_EMU_COMPONENT_DMA);
-        PPI8255* ppi = Memory_Alloc<PPI8255>(TAG_EMU_COMPONENT_PERIPHERAL);
+        Emulation_InitCommands();
 
-        test_machine.AddComponent(cpu_808x);
-        test_machine.AddComponent(pit);
-        test_machine.AddComponent(dma);
-        test_machine.AddComponent(ppi);
+        Render_Init();
 
         emulation_running = true; 
-        
     }
     
     void Emulation_Start()
     {
-        test_machine.Start();
+        //TODO: Automatically create a default config file, and go on
+        if (emu_machine.components.size() == 0)
+            Logging_LogChannel("Provide a config file!\n", LogChannel::Fatal);
+        else
+            
+        emu_machine.Start();
     }
 
     // ENTRY POINT OF THE EMU_THREAD!
     void Emulation_Tick()
     {
         while (emulation_running)
-            test_machine.Tick();
+            emu_machine.Tick();
     }
 
     void Emulation_Shutdown()
     {
-        test_machine.Shutdown();
+        emu_machine.Shutdown();
         IOx86_Shutdown();           // kill IOx86 last just in case
+
+        // TODO: Should this be somewhere else?
+        Render_Shutdown();
+
     }
 }
